<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:background="@drawable/activity_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <com.github.siyamed.shapeimageview.RoundedImageView
            android:id="@+id/poster_Image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/default_img"
            app:siRadius="6dp"
            app:siSquare="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0.5"
                android:text="@string/titlename"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="16dp">

            </TextView>

            <TextView
                android:id="@+id/yearText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.001"
                android:text="@string/year"
                android:gravity="center"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:textSize="16dp">

            </TextView>

            <TextView
                android:id="@+id/typeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.001"
                android:text="@string/type"
                android:gravity="center"
                android:layout_marginBottom="7dp"
                android:textColor="@color/white"
                android:textSize="16dp">

            </TextView>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_light">

    </View>
</LinearLayout>